tests/transpiler/x/clj/append_builtin.clj
;; Generated by Mochi transpiler on 2025-07-19T06:44:33Z
(ns main)
(def a [1 2])
(defn -main [] (println (append a 3)))
(-main)
